--- a/portfolio-app/src/index.css
+++ b/portfolio-app/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
+
+@layer base {
+    body {
+        @apply font-[Orbitron];
+    }
+    li{
+        @apply px-5;
+        @apply cursor-pointer
+    }
+}
